Problem: missing files from VS2008 solution
Solution: generate list of sources and headers with:

 ls -1 src/*cpp | sort | sed 's|src/\(.*\)|      <File RelativePath="..\\..\\..\\..\\src\\\1" />|g'
 ls -1 src/*hpp | sort | sed 's|src/\(.*\)|      <File RelativePath="..\\..\\..\\..\\src\\\1" />|g'

and add them.

--- a/builds/msvc/vs2008/libzmq/libzmq.vcproj
+++ b/builds/msvc/vs2008/libzmq/libzmq.vcproj
@@ -102,9 +102,14 @@
     <Filter Name="Source Files" Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx" UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
       <File RelativePath="..\..\errno.cpp" />
       <File RelativePath="..\..\..\..\src\address.cpp" />
+      <File RelativePath="..\..\..\..\src\client.cpp" />
       <File RelativePath="..\..\..\..\src\clock.cpp" />
       <File RelativePath="..\..\..\..\src\ctx.cpp" />
+      <File RelativePath="..\..\..\..\src\curve_client.cpp" />
+      <File RelativePath="..\..\..\..\src\curve_mechanism_base.cpp" />
+      <File RelativePath="..\..\..\..\src\curve_server.cpp" />
       <File RelativePath="..\..\..\..\src\dealer.cpp" />
+      <File RelativePath="..\..\..\..\src\decoder_allocators.cpp" />
       <File RelativePath="..\..\..\..\src\devpoll.cpp" />
       <File RelativePath="..\..\..\..\src\dgram.cpp" />
       <File RelativePath="..\..\..\..\src\dish.cpp" />
@@ -112,20 +117,26 @@
       <File RelativePath="..\..\..\..\src\epoll.cpp" />
       <File RelativePath="..\..\..\..\src\err.cpp" />
       <File RelativePath="..\..\..\..\src\fq.cpp" />
+      <File RelativePath="..\..\..\..\src\gather.cpp" />
+      <File RelativePath="..\..\..\..\src\gssapi_client.cpp" />
+      <File RelativePath="..\..\..\..\src\gssapi_mechanism_base.cpp" />
+      <File RelativePath="..\..\..\..\src\gssapi_server.cpp" />
       <File RelativePath="..\..\..\..\src\io_object.cpp" />
       <File RelativePath="..\..\..\..\src\io_thread.cpp" />
-      <File RelativePath="..\..\..\..\src\ip.cpp" />
       <File RelativePath="..\..\..\..\src\ipc_address.cpp" />
       <File RelativePath="..\..\..\..\src\ipc_connecter.cpp" />
       <File RelativePath="..\..\..\..\src\ipc_listener.cpp" />
+      <File RelativePath="..\..\..\..\src\ip.cpp" />
       <File RelativePath="..\..\..\..\src\kqueue.cpp" />
       <File RelativePath="..\..\..\..\src\lb.cpp" />
       <File RelativePath="..\..\..\..\src\mailbox.cpp" />
+      <File RelativePath="..\..\..\..\src\mailbox_safe.cpp" />
       <File RelativePath="..\..\..\..\src\mechanism_base.cpp" />
       <File RelativePath="..\..\..\..\src\mechanism.cpp" />
       <File RelativePath="..\..\..\..\src\metadata.cpp" />
       <File RelativePath="..\..\..\..\src\msg.cpp" />
       <File RelativePath="..\..\..\..\src\mtrie.cpp" />
+      <File RelativePath="..\..\..\..\src\norm_engine.cpp" />
       <File RelativePath="..\..\..\..\src\null_mechanism.cpp" />
       <File RelativePath="..\..\..\..\src\object.cpp" />
       <File RelativePath="..\..\..\..\src\options.cpp" />
@@ -139,6 +150,8 @@
       <File RelativePath="..\..\..\..\src\plain_server.cpp" />
       <File RelativePath="..\..\..\..\src\poll.cpp" />
       <File RelativePath="..\..\..\..\src\poller_base.cpp" />
+      <File RelativePath="..\..\..\..\src\pollset.cpp" />
+      <File RelativePath="..\..\..\..\src\precompiled.cpp" />
       <File RelativePath="..\..\..\..\src\proxy.cpp" />
       <File RelativePath="..\..\..\..\src\pub.cpp" />
       <File RelativePath="..\..\..\..\src\pull.cpp" />
@@ -151,27 +164,38 @@
       <File RelativePath="..\..\..\..\src\rep.cpp" />
       <File RelativePath="..\..\..\..\src\req.cpp" />
       <File RelativePath="..\..\..\..\src\router.cpp" />
+      <File RelativePath="..\..\..\..\src\scatter.cpp" />
       <File RelativePath="..\..\..\..\src\select.cpp" />
+      <File RelativePath="..\..\..\..\src\server.cpp" />
       <File RelativePath="..\..\..\..\src\session_base.cpp" />
       <File RelativePath="..\..\..\..\src\signaler.cpp" />
       <File RelativePath="..\..\..\..\src\socket_base.cpp" />
       <File RelativePath="..\..\..\..\src\socket_poller.cpp" />
+      <File RelativePath="..\..\..\..\src\socks_connecter.cpp" />
+      <File RelativePath="..\..\..\..\src\socks.cpp" />
       <File RelativePath="..\..\..\..\src\stream.cpp" />
       <File RelativePath="..\..\..\..\src\stream_engine.cpp" />
       <File RelativePath="..\..\..\..\src\sub.cpp" />
-      <File RelativePath="..\..\..\..\src\tcp.cpp" />
       <File RelativePath="..\..\..\..\src\tcp_address.cpp" />
       <File RelativePath="..\..\..\..\src\tcp_connecter.cpp" />
+      <File RelativePath="..\..\..\..\src\tcp.cpp" />
       <File RelativePath="..\..\..\..\src\tcp_listener.cpp" />
       <File RelativePath="..\..\..\..\src\thread.cpp" />
       <File RelativePath="..\..\..\..\src\timers.cpp" />
+      <File RelativePath="..\..\..\..\src\tipc_address.cpp" />
+      <File RelativePath="..\..\..\..\src\tipc_connecter.cpp" />
+      <File RelativePath="..\..\..\..\src\tipc_listener.cpp" />
       <File RelativePath="..\..\..\..\src\trie.cpp" />
+      <File RelativePath="..\..\..\..\src\udp_address.cpp" />
+      <File RelativePath="..\..\..\..\src\udp_engine.cpp" />
       <File RelativePath="..\..\..\..\src\v1_decoder.cpp" />
       <File RelativePath="..\..\..\..\src\v1_encoder.cpp" />
       <File RelativePath="..\..\..\..\src\v2_decoder.cpp" />
       <File RelativePath="..\..\..\..\src\v2_encoder.cpp" />
-      <File RelativePath="..\..\..\..\src\udp_address.cpp" />
-      <File RelativePath="..\..\..\..\src\udp_engine.cpp" />
+      <File RelativePath="..\..\..\..\src\vmci_address.cpp" />
+      <File RelativePath="..\..\..\..\src\vmci_connecter.cpp" />
+      <File RelativePath="..\..\..\..\src\vmci.cpp" />
+      <File RelativePath="..\..\..\..\src\vmci_listener.cpp" />
       <File RelativePath="..\..\..\..\src\xpub.cpp" />
       <File RelativePath="..\..\..\..\src\xsub.cpp" />
       <File RelativePath="..\..\..\..\src\zap_client.cpp" />
@@ -185,10 +209,19 @@
       <File RelativePath="..\..\..\..\src\atomic_counter.hpp" />
       <File RelativePath="..\..\..\..\src\atomic_ptr.hpp" />
       <File RelativePath="..\..\..\..\src\blob.hpp" />
+      <File RelativePath="..\..\..\..\src\client.hpp" />
       <File RelativePath="..\..\..\..\src\clock.hpp" />
       <File RelativePath="..\..\..\..\src\command.hpp" />
+      <File RelativePath="..\..\..\..\src\condition_variable.hpp" />
       <File RelativePath="..\..\..\..\src\config.hpp" />
       <File RelativePath="..\..\..\..\src\ctx.hpp" />
+      <File RelativePath="..\..\..\..\src\curve_client.hpp" />
+      <File RelativePath="..\..\..\..\src\curve_client_tools.hpp" />
+      <File RelativePath="..\..\..\..\src\curve_mechanism_base.hpp" />
+      <File RelativePath="..\..\..\..\src\curve_server.hpp" />
+      <File RelativePath="..\..\..\..\src\dbuffer.hpp" />
+      <File RelativePath="..\..\..\..\src\dealer.hpp" />
+      <File RelativePath="..\..\..\..\src\decoder_allocators.hpp" />
       <File RelativePath="..\..\..\..\src\decoder.hpp" />
       <File RelativePath="..\..\..\..\src\devpoll.hpp" />
       <File RelativePath="..\..\..\..\src\dgram.hpp" />
@@ -199,23 +232,34 @@
       <File RelativePath="..\..\..\..\src\err.hpp" />
       <File RelativePath="..\..\..\..\src\fd.hpp" />
       <File RelativePath="..\..\..\..\src\fq.hpp" />
+      <File RelativePath="..\..\..\..\src\gather.hpp" />
+      <File RelativePath="..\..\..\..\src\gssapi_client.hpp" />
+      <File RelativePath="..\..\..\..\src\gssapi_mechanism_base.hpp" />
+      <File RelativePath="..\..\..\..\src\gssapi_server.hpp" />
+      <File RelativePath="..\..\..\..\src\i_decoder.hpp" />
+      <File RelativePath="..\..\..\..\src\i_encoder.hpp" />
       <File RelativePath="..\..\..\..\src\i_engine.hpp" />
-      <File RelativePath="..\..\..\..\src\i_poll_events.hpp" />
+      <File RelativePath="..\..\..\..\src\i_mailbox.hpp" />
       <File RelativePath="..\..\..\..\src\io_object.hpp" />
       <File RelativePath="..\..\..\..\src\io_thread.hpp" />
-      <File RelativePath="..\..\..\..\src\ip.hpp" />
       <File RelativePath="..\..\..\..\src\ipc_address.hpp" />
       <File RelativePath="..\..\..\..\src\ipc_connecter.hpp" />
       <File RelativePath="..\..\..\..\src\ipc_listener.hpp" />
+      <File RelativePath="..\..\..\..\src\ip.hpp" />
+      <File RelativePath="..\..\..\..\src\i_poll_events.hpp" />
       <File RelativePath="..\..\..\..\src\kqueue.hpp" />
       <File RelativePath="..\..\..\..\src\lb.hpp" />
       <File RelativePath="..\..\..\..\src\likely.hpp" />
+      <File RelativePath="..\..\..\..\src\macros.hpp" />
       <File RelativePath="..\..\..\..\src\mailbox.hpp" />
+      <File RelativePath="..\..\..\..\src\mailbox_safe.hpp" />
+      <File RelativePath="..\..\..\..\src\mechanism_base.hpp" />
       <File RelativePath="..\..\..\..\src\mechanism.hpp" />
       <File RelativePath="..\..\..\..\src\metadata.hpp" />
       <File RelativePath="..\..\..\..\src\msg.hpp" />
       <File RelativePath="..\..\..\..\src\mtrie.hpp" />
       <File RelativePath="..\..\..\..\src\mutex.hpp" />
+      <File RelativePath="..\..\..\..\src\norm_engine.hpp" />
       <File RelativePath="..\..\..\..\src\null_mechanism.hpp" />
       <File RelativePath="..\..\..\..\src\object.hpp" />
       <File RelativePath="..\..\..\..\src\options.hpp" />
@@ -228,9 +272,11 @@
       <File RelativePath="..\..\..\..\src\plain_client.hpp" />
       <File RelativePath="..\..\..\..\src\plain_server.hpp" />
       <File RelativePath="..\..\..\..\src\platform.hpp" />
-      <File RelativePath="..\..\..\..\src\poll.hpp" />
-      <File RelativePath="..\..\..\..\src\poller.hpp" />
       <File RelativePath="..\..\..\..\src\poller_base.hpp" />
+      <File RelativePath="..\..\..\..\src\poller.hpp" />
+      <File RelativePath="..\..\..\..\src\poll.hpp" />
+      <File RelativePath="..\..\..\..\src\pollset.hpp" />
+      <File RelativePath="..\..\..\..\src\precompiled.hpp" />
       <File RelativePath="..\..\..\..\src\proxy.hpp" />
       <File RelativePath="..\..\..\..\src\pub.hpp" />
       <File RelativePath="..\..\..\..\src\pull.hpp" />
@@ -242,37 +288,50 @@
       <File RelativePath="..\..\..\..\src\reaper.hpp" />
       <File RelativePath="..\..\..\..\src\rep.hpp" />
       <File RelativePath="..\..\..\..\src\req.hpp" />
+      <File RelativePath="..\..\..\..\src\router.hpp" />
+      <File RelativePath="..\..\..\..\src\scatter.hpp" />
       <File RelativePath="..\..\..\..\src\select.hpp" />
+      <File RelativePath="..\..\..\..\src\server.hpp" />
       <File RelativePath="..\..\..\..\src\session_base.hpp" />
       <File RelativePath="..\..\..\..\src\signaler.hpp" />
       <File RelativePath="..\..\..\..\src\socket_base.hpp" />
+      <File RelativePath="..\..\..\..\src\socket_poller.hpp" />
+      <File RelativePath="..\..\..\..\src\socks_connecter.hpp" />
+      <File RelativePath="..\..\..\..\src\socks.hpp" />
       <File RelativePath="..\..\..\..\src\stdint.hpp" />
-      <File RelativePath="..\..\..\..\src\stream.hpp" />
       <File RelativePath="..\..\..\..\src\stream_engine.hpp" />
+      <File RelativePath="..\..\..\..\src\stream.hpp" />
       <File RelativePath="..\..\..\..\src\sub.hpp" />
-      <File RelativePath="..\..\..\..\src\tcp.hpp" />
       <File RelativePath="..\..\..\..\src\tcp_address.hpp" />
       <File RelativePath="..\..\..\..\src\tcp_connecter.hpp" />
+      <File RelativePath="..\..\..\..\src\tcp.hpp" />
       <File RelativePath="..\..\..\..\src\tcp_listener.hpp" />
       <File RelativePath="..\..\..\..\src\thread.hpp" />
       <File RelativePath="..\..\..\..\src\timers.hpp" />
+      <File RelativePath="..\..\..\..\src\tipc_address.hpp" />
+      <File RelativePath="..\..\..\..\src\tipc_connecter.hpp" />
+      <File RelativePath="..\..\..\..\src\tipc_listener.hpp" />
       <File RelativePath="..\..\..\..\src\trie.hpp" />
+      <File RelativePath="..\..\..\..\src\udp_address.hpp" />
+      <File RelativePath="..\..\..\..\src\udp_engine.hpp" />
       <File RelativePath="..\..\..\..\src\v1_decoder.hpp" />
       <File RelativePath="..\..\..\..\src\v1_encoder.hpp" />
-      <File RelativePath="..\..\..\..\src\v1_protocol.hpp" />
       <File RelativePath="..\..\..\..\src\v2_decoder.hpp" />
       <File RelativePath="..\..\..\..\src\v2_encoder.hpp" />
       <File RelativePath="..\..\..\..\src\v2_protocol.hpp" />
-      <File RelativePath="..\..\..\..\src\udp_address.hpp" />
-      <File RelativePath="..\..\..\..\src\udp_engine.hpp" />
+      <File RelativePath="..\..\..\..\src\vmci_address.hpp" />
+      <File RelativePath="..\..\..\..\src\vmci_connecter.hpp" />
+      <File RelativePath="..\..\..\..\src\vmci.hpp" />
+      <File RelativePath="..\..\..\..\src\vmci_listener.hpp" />
       <File RelativePath="..\..\..\..\src\windows.hpp" />
       <File RelativePath="..\..\..\..\src\wire.hpp" />
       <File RelativePath="..\..\..\..\src\xpub.hpp" />
-      <File RelativePath="..\..\..\..\src\xrep.hpp" />
-      <File RelativePath="..\..\..\..\src\xreq.hpp" />
       <File RelativePath="..\..\..\..\src\xsub.hpp" />
+      <File RelativePath="..\..\..\..\src\ypipe_base.hpp" />
+      <File RelativePath="..\..\..\..\src\ypipe_conflate.hpp" />
       <File RelativePath="..\..\..\..\src\ypipe.hpp" />
       <File RelativePath="..\..\..\..\src\yqueue.hpp" />
+      <File RelativePath="..\..\..\..\src\zap_client.hpp" />
     </Filter>
   </Files>
   <Globals />
