--- a/configure.ac
+++ b/configure.ac
@@ -442,10 +442,12 @@ AC_ARG_WITH([libgssapi_krb5], [AS_HELP_STRING([--with-libgssapi_krb5],
 
 # conditionally require libgssapi_krb5
 if test "x$require_libgssapi_krb5_ext" != "xno"; then
-    AC_CHECK_HEADERS(gssapi/gssapi_generic.h)
-    AC_SEARCH_LIBS([gss_init_sec_context], [gssapi_krb5 gssapi],
-        AC_DEFINE(HAVE_LIBGSSAPI_KRB5, [1], [Enabled GSSAPI security]),
-        AC_MSG_ERROR(libgssapi_krb5 is needed for GSSAPI security))
+    PKG_CHECK_MODULES([gssapi_krb5], [krb5-gssapi], [], [
+        AC_CHECK_HEADERS(gssapi/gssapi_generic.h)
+        AC_SEARCH_LIBS([gss_init_sec_context], [gssapi_krb5 gssapi],
+            AC_DEFINE(HAVE_LIBGSSAPI_KRB5, [1], [Enabled GSSAPI security]),
+            AC_MSG_ERROR(libgssapi_krb5 is needed for GSSAPI security))
+    ])
 fi
 AM_CONDITIONAL(BUILD_GSSAPI, test "x$require_libgssapi_krb5_ext" != "xno")
 
