Problem: Travis does not test GSSAPI
Solution: enable option and install build-dependency for the jobs that
already install packages only, to minimise marginal cost in term of
runtime

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ matrix:
       apt:
         packages:
         - valgrind
-  - env: BUILD_TYPE=default CURVE=libsodium
+  - env: BUILD_TYPE=default CURVE=libsodium GSSAPI=enabled
     os: linux
     addons:
       apt:
@@ -49,10 +49,11 @@ matrix:
         - sourceline: 'deb http://download.opensuse.org/repositories/network:/messaging:/zeromq:/git-stable/xUbuntu_14.04/ ./'
           key_url: 'http://download.opensuse.org/repositories/network:/messaging:/zeromq:/git-stable/xUbuntu_14.04/Release.key'
         packages:
+        - libkrb5-dev
         - libsodium-dev
         - asciidoc
         - xmlto
-  - env: BUILD_TYPE=default CURVE=libsodium DRAFT=enabled
+  - env: BUILD_TYPE=default CURVE=libsodium DRAFT=enabled GSSAPI=enabled
     os: linux
     addons:
       apt:
@@ -60,6 +61,7 @@ matrix:
         - sourceline: 'deb http://download.opensuse.org/repositories/network:/messaging:/zeromq:/git-stable/xUbuntu_14.04/ ./'
           key_url: 'http://download.opensuse.org/repositories/network:/messaging:/zeromq:/git-stable/xUbuntu_14.04/Release.key'
         packages:
+        - libkrb5-dev
         - libsodium-dev
   - env: BUILD_TYPE=default CURVE=libsodium DRAFT=enabled
     os: osx
