--- a/builds/cmake/platform.hpp.in
+++ b/builds/cmake/platform.hpp.in
@@ -24,6 +24,8 @@
 #cmakedefine ZMQ_HAVE_SO_PEERCRED
 #cmakedefine ZMQ_HAVE_LOCAL_PEERCRED
 
+#cmakedefine ZMQ_HAVE_O_CLOEXEC
+
 #cmakedefine ZMQ_HAVE_SOCK_CLOEXEC
 #cmakedefine ZMQ_HAVE_SO_KEEPALIVE
 #cmakedefine ZMQ_HAVE_TCP_KEEPCNT
