--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -70,6 +70,7 @@ set(tests
         test_sodium
         test_monitor
 		test_socket_null
+	test_reconnect_ivl
 )
 if(ZMQ_HAVE_CURVE)
   list(APPEND tests 
