--- a/Makefile.am
+++ b/Makefile.am
@@ -684,6 +684,7 @@ test_apps += \
 	tests/test_shutdown_stress \
 	tests/test_ipc_wildcard \
 	tests/test_pair_ipc \
+	tests/test_rebind_ipc \
 	tests/test_reqrep_ipc \
 	tests/test_use_fd_ipc \
 	tests/test_use_fd_tcp \
@@ -701,6 +702,9 @@ tests_test_pair_ipc_SOURCES = \
 	tests/test_pair_ipc.cpp \
 	tests/testutil.hpp
 tests_test_pair_ipc_LDADD = src/libzmq.la
+
+tests_test_rebind_ipc_SOURCES = tests/test_rebind_ipc.cpp
+tests_test_rebind_ipc_LDADD = src/libzmq.la
 
 tests_test_reqrep_ipc_SOURCES = \
 	tests/test_reqrep_ipc.cpp \
