--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -5,6 +5,7 @@ Maintainer: libzmq Developers <zeromq-dev@lists.zeromq.org>
 Build-Depends: debhelper (>= 9),
  dh-autoreconf,
  libkrb5-dev,
+ libnorm-dev,
  libpgm-dev,
  libsodium-dev,
  libunwind-dev | libunwind8-dev | libunwind7-dev,
