Problem: Travis does not build with NORM
Solution: install package and enable the build on some Linux jobs

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ matrix:
       apt:
         packages:
         - valgrind
-  - env: BUILD_TYPE=default CURVE=libsodium GSSAPI=enabled PGM=enabled
+  - env: BUILD_TYPE=default CURVE=libsodium GSSAPI=enabled PGM=enabled NORM=enabled
     os: linux
     addons:
       apt:
@@ -50,11 +50,12 @@ matrix:
           key_url: 'http://download.opensuse.org/repositories/network:/messaging:/zeromq:/git-stable/xUbuntu_14.04/Release.key'
         packages:
         - libkrb5-dev
+        - libnorm-dev
         - libpgm-dev
         - libsodium-dev
         - asciidoc
         - xmlto
-  - env: BUILD_TYPE=default CURVE=libsodium DRAFT=enabled GSSAPI=enabled PGM=enabled
+  - env: BUILD_TYPE=default CURVE=libsodium DRAFT=enabled GSSAPI=enabled PGM=enabled NORM=enabled
     os: linux
     addons:
       apt:
@@ -63,6 +64,7 @@ matrix:
           key_url: 'http://download.opensuse.org/repositories/network:/messaging:/zeromq:/git-stable/xUbuntu_14.04/Release.key'
         packages:
         - libkrb5-dev
+        - libnorm-dev
         - libpgm-dev
         - libsodium-dev
   - env: BUILD_TYPE=default CURVE=libsodium DRAFT=enabled
