Problem: accept4 not available on all platforms
Solution: check for availability in CMake and autoconf before using it

--- a/builds/cmake/platform.hpp.in
+++ b/builds/cmake/platform.hpp.in
@@ -36,6 +36,7 @@
 #cmakedefine ZMQ_HAVE_PTHREAD_SETNAME_2
 #cmakedefine ZMQ_HAVE_PTHREAD_SETNAME_3
 #cmakedefine ZMQ_HAVE_PTHREAD_SET_NAME
+#cmakedefine HAVE_ACCEPT4
 
 #cmakedefine ZMQ_HAVE_OPENPGM
 #cmakedefine ZMQ_MAKE_VALGRIND_HAPPY
