Problem: Debian packages are missing zmq.hpp
Solution: install it if available. Download it from its repo as part
of the OBS source run.
Debian and Ubuntu always ship zmq.hpp in libzmq-dev, so do the same.
In the RPM world it is in its own separate package, so don't do the
same for RPM.

--- a/packaging/debian/rules
+++ b/packaging/debian/rules
@@ -52,6 +52,12 @@ else
 endif
 endif
 
+override_dh_auto_install:
+	dh_auto_install
+ifneq ("$(wildcard debian/zmq.hpp)","")
+	cp $(CURDIR)/debian/zmq.hpp $(CURDIR)/debian/tmp/usr/include/
+endif
+
 override_dh_strip:
 	dh_strip --dbg-package=libzmq5-dbg
 
