--- a/.travis.yml
+++ b/.travis.yml
@@ -92,6 +92,10 @@ matrix:
         - llvm-toolchain-trusty-5.0
       packages:
         - clang-5.0
+  - env: BUILD_TYPE=default POLLER=poll
+    os: linux
+  - env: BUILD_TYPE=default POLLER=select
+    os: linux
 
 sudo: required
 
