Problem: Travis jobs cannot run in container infra
Solution: set sudo: false as it is not required anymore

--- a/.travis.yml
+++ b/.travis.yml
@@ -97,7 +97,7 @@ matrix:
   - env: BUILD_TYPE=default POLLER=select
     os: linux
 
-sudo: required
+sudo: false
 
 before_install:
 - if [ $TRAVIS_OS_NAME == "osx" -a $BUILD_TYPE == "android" ] ; then brew update; brew install binutils ; fi
